--- a/staging/greeter/Chart.yaml
+++ b/staging/greeter/Chart.yaml
@@ -4,6 +4,6 @@ type: application
 version: 1.0.0
 appVersion: "1.0.0"
 dependencies:
-- name: greeter
+- name: greeting-app
   version: 0.2.0
   repository: https://rallinator7.github.io/argocd-demo
