--- a/staging/greeting-app/Chart.yaml
+++ b/staging/greeting-app/Chart.yaml
@@ -6,4 +6,4 @@ appVersion: "1.0.0"
 dependencies:
 - name: greeting-app
   version: 0.3.1
-  repository: https://rallinator7.github.io/argocd-demo
+  repository: https://github.com/jamesw201/argo-testkube-tilt-act
