--- a/staging/greeting-app/values.yaml
+++ b/staging/greeting-app/values.yaml
@@ -2,7 +2,7 @@ greeting-app:
   chartName: greeting-app
   deployment: 
     replicaCount: 1
-    image: 3d-testkube-registry:6000/greeter:latest
+    image: k3d-testkube-registry:6000/greeter:latest
     tag: 7b0245f
   config:
     port: 8000
