--- a/production/greeting-app/values.yaml
+++ b/production/greeting-app/values.yaml
@@ -2,7 +2,7 @@ greeting-app:
   chartName: greeting-app
   deployment: 
     replicaCount: 1
-    image: ghcr.io/rallinator7/greeter-app
+    image: 3d-testkube-registry:6000/greeter:latest
     tag: 37c9543
   config:
     port: 8000 #should be the same as deployment port
